@@ -1,13 +1,11 @@
-name: Ubuntu
+name: Ubuntu-Upload
 
 on:
-  push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+  release:
+    types: [created]
 
 jobs:
-  build-arch64:
+  upload-to-s3:
     runs-on: ubuntu-latest
     container: symless/synergy-core:ubuntu${{ matrix.distro }}
     env:
@@ -19,7 +17,6 @@ jobs:
         include:
           - distro: '16.04'
             flag: '-j1'
-
 
     name: ubuntu${{ matrix.distro }}
 
@@ -34,5 +31,10 @@ jobs:
           . ./version
           make ${{ matrix.flag }}
 
-      - name: Run unit test
-        run: ./build/bin/unittests
+      - uses: shallwefootball/s3-upload-action@master
+        with:
+          aws_key_id: ${{ secrets.AWS_S3_UPLOAD_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_S3_UPLOAD_SECRET }}
+          aws_bucket: ${{ secrets.AWS_BUCKET }}
+          source_dir: ./build/bin
+          destination_dir: "./synergy3/latest/Ubuntu_${{matrix.distro}}/"
