@@ -1,0 +1,39 @@
+name: Mac-10.15-Upload
+
+on:
+  release:
+    types: [created]
+
+jobs:
+  build-arch64:
+    runs-on: macos-10.15
+
+    env:
+      GIT_COMMIT: ${{ github.sha }}
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Install brew dependencies
+      run: |
+        brew list qt5 &>/dev/null || brew install qt5
+        brew list openssl &>/dev/null || brew install openssl
+
+    - name: Build
+      run: |
+        mkdir build
+        cd build
+        cmake \
+          -DCMAKE_OSX_DEPLOYMENT_TARGET=10.14 \
+          -DCMAKE_BUILD_TYPE=Release \
+          -DCMAKE_PREFIX_PATH="$(brew --prefix qt5);$(brew --prefix openssl)" ..
+        . ./version
+        make -j
+
+    - uses: shallwefootball/s3-upload-action@master
+      with:
+        aws_key_id: ${{ secrets.AWS_S3_UPLOAD_KEY_ID }}
+        aws_secret_access_key: ${{ secrets.AWS_S3_UPLOAD_SECRET }}
+        aws_bucket: ${{ secrets.AWS_BUCKET }}
+        source_dir: ./build/bin
+        destination_dir: "./synergy3/latest/macOS_10.15/"
