@@ -1,0 +1,30 @@
+name: Raspberry Pi - Upload
+
+on:
+  release:
+    types: [created]
+jobs:
+  test-on-pi:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [[self-hosted, linux, ARM, pi-3], [self-hosted, linux, ARM64, pi-4]]
+    env:
+      GIT_COMMIT: ${{ github.sha }}
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Build
+      run: |
+        mkdir -p build; cd build
+        cmake -DCMAKE_BUILD_TYPE=Release ..
+        make
+
+    - uses: shallwefootball/s3-upload-action@master
+      with:
+        aws_key_id: ${{ secrets.AWS_S3_UPLOAD_KEY_ID }}
+        aws_secret_access_key: ${{ secrets.AWS_S3_UPLOAD_SECRET }}
+        aws_bucket: ${{ secrets.AWS_BUCKET }}
+        source_dir: ./build/bin
+        destination_dir: "./synergy3/latest/Raspberry/${{ matrix.os[3] }}_${{ matrix.os[2]}}/"
